# CtrlrX

./: .clang-format  .clang-uml  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_for_LuaJIT.txt  CMakeLists_org.txt  CtrlrX 5.6.32.jucer  CtrlrX 5.6.33.jucer  CtrlrX 5.6.34 [Without AAX & VST].jucer  CtrlrX 5.6.34 [Without AAX].jucer  CtrlrX 5.6.34.jucer  CtrlrX 5.6.35 [Without AAX & VST].jucer  CtrlrX 5.6.35 [Without AAX].jucer  CtrlrX 5.6.35.jucer  CtrlrX 5.6.36 [Without AAX & VST].jucer  CtrlrX 5.6.36 [Without AAX].jucer  CtrlrX 5.6.36.jucer  CtrlrX.jucer  CtrlrX.settings  JUCE8_LUAJIT_PORTING.md  LUAJIT_BUILD.md  LuaAPI.xml  README - autobuild_win.md  README.md  add_aliases.py  autobuild_ninja  autobuild_win.bat  build.bat  build.sh  build.yaml.txt  build_linux.sh  build_log.txt  changes.txt  debug_parser.py  files_changed_advise_damien.txt  linux_autobuild  lua_api_patcher.py  luabind_parser.py  luabind_parser_v21.py  (+4 more)
.github/: FUNDING.yml
.github/workflows/: build-cmake.yml  build-release.yml  build_and_test.yml  clang_uml_diagrams.yml
8.ywfQSAvxTAN/: JSON.lua
Builds/CodeBlocksLinux/: CtrlrX.cbp  resources.rc
Builds/LinuxMakefile/: Makefile
Builds/MacOSX/: Info-AAX.plist  Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST.plist
Builds/MacOSX/CtrlrX.xcodeproj/: project.pbxproj
Builds/VisualStudio2019/: CtrlrX.sln  CtrlrX_AAX.vcxproj  CtrlrX_AAX.vcxproj.filters  CtrlrX_SharedCode.vcxproj  CtrlrX_SharedCode.vcxproj.filters  CtrlrX_StandalonePlugin.vcxproj  CtrlrX_VST.vcxproj  CtrlrX_VST.vcxproj.filters  CtrlrX_VST3.vcxproj  Ctrlr_SharedCode.vcxproj  Ctrlr_SharedCode.vcxproj.filters  Ctrlr_StandalonePlugin.vcxproj  Ctrlr_VST.vcxproj  Ctrlr_VST3.vcxproj  resources.rc
Builds/VisualStudio2022/: CtrlrX.sln  CtrlrX_AAX.vcxproj  CtrlrX_AAX.vcxproj.filters  CtrlrX_SharedCode.vcxproj  CtrlrX_SharedCode.vcxproj.filters  CtrlrX_StandalonePlugin.vcxproj  CtrlrX_StandalonePlugin.vcxproj.filters  CtrlrX_VST.vcxproj  CtrlrX_VST.vcxproj.filters  CtrlrX_VST3.vcxproj  CtrlrX_VST3.vcxproj.filters
Doc/: Ctrlr.overrides  gpl.txt  lua.txt
JUCE/: CMakeLists.txt
JUCE/modules/juce_audio_plugin_client/: AUResources.r
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Packaging/Mac/: Icon.icns  distribution.xml.template
Packaging/Windows/: ctrlr.nsi  installer.iss
Packaging/resources/: README
Scripts/: extract_enums.py  git-revision.sh  is_luajit.lua  lua_api_patcher.py  luabind_parser.py  post-commit
Source/Core/: CtrlrFontManager.cpp  CtrlrFontManager.h  CtrlrIDManager.cpp  CtrlrIDManager.h  CtrlrIDs.h  CtrlrInlineUtilitiesGUI.cpp  CtrlrInlineUtilitiesGUI.h  CtrlrLinuxGlibcCheck.cpp  CtrlrLog.cpp  CtrlrLog.h  CtrlrMacros.h  CtrlrMainPage.h  CtrlrProperties.cpp  CtrlrRevision.h  CtrlrRevision.template  CtrlrSysexProcessor.cpp  CtrlrSysexProcessor.h  CtrlrSysexProcessorOwned.cpp  CtrlrSysexProcessorOwned.h  CtrlrSysexToken.cpp  CtrlrSysexToken.h  CtrlrUtilities.cpp  CtrlrUtilities.h  CtrlrUtilitiesGUI.cpp  CtrlrUtilitiesGUI.h  LinuxDpiScale.cpp  LinuxDpiScale.h  dxtrans.h  stdafx.h  stdafx_luabind.h
Source/Core/CtrlrManager/: CtrlrManager.cpp  CtrlrManager.h  CtrlrManagerInstance.cpp  CtrlrManagerVst.h
Source/Core/CtrlrModulator/: CtrlrModulator.cpp  CtrlrModulator.h  CtrlrModulatorProcessor.cpp  CtrlrModulatorProcessor.h
Source/Lua/: CtrlrLuaAudioConverter.cpp  CtrlrLuaDebugger.cpp  CtrlrLuaDebugger.h  CtrlrLuaManager.cpp  CtrlrLuaManager.h  CtrlrLuaObject.cpp  CtrlrLuaObject.h  CtrlrLuaObjectWrapper.cpp  CtrlrLuaPanelCanvasLayer.cpp  CtrlrLuaUtils.cpp  CtrlrLuaUtils.h
Source/MIDI/: CtrlrMIDIDevice.cpp  CtrlrMIDIDevice.h  CtrlrMIDIDeviceManager.cpp  CtrlrMIDIFilter.cpp  CtrlrMIDIFilter.h  CtrlrMidiInputComparator.cpp  CtrlrMidiInputComparator.h  CtrlrMidiInputComparatorMulti.cpp  CtrlrMidiInputComparatorMulti.h  CtrlrMidiInputComparatorSingle.cpp  CtrlrMidiInputComparatorSingle.h  CtrlrMidiInputComparatorTypes.h  CtrlrMidiMessage.cpp  CtrlrMidiMessage.h  CtrlrMidiMessageEx.cpp  CtrlrMidiMessageEx.h  CtrlrOwnedMidiMessage.cpp  CtrlrOwnedMidiMessage.h
Source/Misc/: libr-bfd.c
Source/Misc/luabind/: .gitignore  CMakeLists.txt  README.md  build_information.hpp
Source/Misc/luabind/examples/: cpp_lua_roundtrip.cpp
Source/Misc/luabind/luabind/: build_information.hpp  dependency_policy.hpp  function.hpp  get_pointer.hpp  typeid.hpp
Source/Misc/luabind/luabind/detail/: call.hpp  call_function.hpp  call_member.hpp  class_registry.hpp  constructor.hpp  deduce_signature.hpp  has_get_pointer.hpp  instance_holder.hpp  make_instance.hpp  object.hpp  policy.hpp
Source/Misc/luabind/src/: class.cpp  lua51compat.cpp  object_rep.cpp  scope.cpp  shared_ptr_converter.cpp  stdafx.h  wrapper_base.cpp
Source/Misc/luabind/tests/: CMakeLists.txt  luabind_roundtrip_tests.cpp
Source/Misc/luajit/: CMakeLists.txt  Check LuaJIT_1_0.bpanelz  LUAJIT_BUILD.md  build.yaml.txt
Source/Misc/luajit/src/: buildvm.exp  buildvm.lib  lua51.exp  luajit.exp  luajit.lib  minilua.exp  minilua.lib  msvcbuild.bat
Source/Misc/luajit/src/jit/: vmdef.lua
Source/Native/: CtrlrGeneric.h  CtrlrLinux.cpp  CtrlrLinux.h  CtrlrMac.cpp  CtrlrMac.h  CtrlrNative.cpp  CtrlrNative.h  CtrlrWindows.cpp  CtrlrWindows.h
Source/Plugin/: CtrlrProcessor.cpp  CtrlrProcessor.h  CtrlrProcessorEditorForLive.cpp  CtrlrProcessorEditorForLive.h
Source/UIComponents/: CtrlrAbout.cpp  CtrlrAbout.h  CtrlrComponentSelection.cpp  CtrlrComponentSelection.h  CtrlrExpressionsHelp.cpp  CtrlrExpressionsHelp.h  CtrlrGenericHelp.cpp  CtrlrGenericHelp.h  CtrlrHelpWindow.cpp  CtrlrHelpWindow.h  CtrlrLogViewer.cpp  CtrlrLogViewer.h  CtrlrLuaApiDatabase.cpp  CtrlrLuaApiDatabase.h  CtrlrLuaApiExplorer.cpp  CtrlrLuaApiExplorer.h  CtrlrLuaClassBrowser.cpp  CtrlrLuaClassBrowser.h  CtrlrMarkdownParser.cpp  CtrlrMarkdownParser.h  CtrlrTextEditor.cpp  CtrlrTextEditor.h  CtrlrTransferDumpHelp.cpp  CtrlrTransferDumpHelp.h  CtrlrValueMap.cpp  CtrlrValueMap.h  CtrlrValueTreeEditor.cpp  CtrlrValueTreeEditor.h
cmake/: Assets.cmake  Findlibbfd.cmake  SharedCodeDefaults.cmake
(+476 files in other folders)
